update doc, force unique name
